--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <title>Gabriel Barroso</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favigab.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat:ital,wght@1,100&family=Sacramento&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
 <div class="topContainer">
-    <img src="/images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="/images/cloud.png" alt="cloud-img">
     <h1>I'm Gabriel.</h1>
     <p>a <span class="pro">pro</span>grammer</p>
-    <img src="/images/cloud.png" alt="cloud-img">
+    <img class="bottom-cloud" src="/images/cloud.png" alt="cloud-img">
     <img src="/images/mountain.png" alt="mountain-img">
 </div>
 
