--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="topContainer">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'm Gabriel.</h1>
-    <p>a <span class="pro">pro</span>grammer</p>
+    <h2>a <span class="pro">pro</span>grammer</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
 </div>
@@ -32,11 +32,13 @@
       <img class="css-skills" src="/images/skills-css.jpg" alt="css-skills">
       <h3>CSS</h3>
       <p>My css skills are basic, but while i learn from the bootcamp i can improve and implement in this website.</p>
+
     </div>
     <div class="skill-row">
       <img class="html-skills" src="/images/skills-html.png" alt="html-skills">
       <h3>HTML</h3>
-      <p>I'm studying HTML at the moment and biulding this website as i learn the basics.</p>
+      <p>I'm studying HTML at the moment and bui lding this website as i learn the basics.</p>
+      
       </div>
     </div>
       <hr>
