--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
 </head>
 <body>
 
-<div class="topContainer">
+<div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'm Gabriel.</h1>
     <h2>a <span class="pro">pro</span>grammer</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
+
 </div>
 <div class="middle-container">
   <div class="profile">
     <img class="happy-coder" src="images/coder.png" alt="happy-coder">
     <h2>Hello.</h2>
-    <p>I'm a student of the Web Development Bootcamp. I ❤️ Coffee and Playing Video games</p>
+    <p class="intro">I'm a student of the Web Development Bootcamp. I ❤️ Coffee and Playing Video games</p>
+
   </div>
   <hr>
   <div class="skills">
@@ -37,7 +39,7 @@
     <div class="skill-row">
       <img class="html-skills" src="/images/skills-html.png" alt="html-skills">
       <h3>HTML</h3>
-      <p>I'm studying HTML at the moment and bui lding this website as i learn the basics.</p>
+      <p>I'm studying HTML at the moment and building this website as i'm Learning the basics.</p>
       
       </div>
     </div>
@@ -45,7 +47,7 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>If you got any tips.</h3>
-      <p>Learning to code? Contact me so we can exchange ideas or learn together.</p>
+      <p class="contact-message">Learning to code? Contact me so we can exchange ideas or learn together.</p>
       <a class="btn" href="mailto:gabrielbarrosovanq@gmail.com">CONTACT ME</a>
     </div>
   </div>
@@ -55,7 +57,7 @@
   <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
   <a class="footer-link" href="https://twitter.com/">Twitter</a>
   <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-  <p>© 2022 Gabriel Barroso.</p>
+  <p class="copyright">© 2022 Gabriel Barroso.</p>
 </div>
     
 
